--- a/border-radius.html
+++ b/border-radius.html
@@ -92,7 +92,9 @@
     <div>
       <h2 class="item-heading"><code>border-radius: 30px 100px 30px 0</code></h2>
       <div class="box box--orange box--radius-diamond"></div>
-    </div </main>
+    </div>
+ </main>
+ <h2>Changes</h2>
 </body>
 
 </html>
